css/main.css
/* ... */
section#product_overview section#aspects {
	margin-top: 50px;
	padding-right: 150px;
	overflow: hidden;
}

section#product_overview section#aspects h3,
section#product_overview section#aspects p {
	margin: 0px;
}

section#product_overview section#aspects > div {
	width: 25%;
	float: left;
	padding-right: 15px;
	box-sizing: border-box;
	font-size: 14px;
}

section#product_overview div.add_to_cart {
	font-size: 21px;
}

section#product_overview div.add_to_cart span.version {
	font-weight: 600;
}

section#product_overview div.add_to_cart span.stock {
	font-size: 17px;
	color: #85D651;
	padding-left: 22px;
	background-image: url('../img/checkmark-green.png');
	background-repeat: no-repeat;
	background-position: left center;
}

section#product_overview div.add_to_cart span.sale,
section#product_overview div.add_to_cart span.current_price {
	font-size: 36px;
}

section#product_overview div.add_to_cart span.current_price {
	font-weight: 600;
}

section#product_overview div.add_to_cart form {
	font-size: 16px;
}

section#product_overview div.add_to_cart form input.amount,
section#cart input.amount {
	width: 18px;
	text-align: center;
	border: none;
}

section#product_overview div.add_to_cart form input.amount:hover,
section#cart input.amount:hover {
	border: 1px solid #CECECE;
}

div.add_to_cart form input.cta,
section#cart div#coupons input.cta,
section#formfields input.cta,
form.validate input.cta {
	margin-top: 15px;
	text-align: center;
	border: 2px solid #FF741F;
	border-radius: 5px;
	padding: 8px 25px;
	font-weight: 600;
	color: #FF741F;
	text-transform: uppercase;
	background: none;
}

div#method label.error {
	border: 2px solid red;
}

form.validate input.cta {
	padding: 9px 25px 10px 25px;
}

section#cart table input.cta {
	font-size: 12px;
}

section#cart div#coupons input.coupon {
	padding: 8px;
	border-radius: 3px;
	width: 220px;
	border: 1px solid #CECECE;
}

section#cart a.del {
	margin-left: 8px;
	display: none;
	color: red;
}

section#cart a.del.show {
	display: inline;
}

section#cart div#coupons label {
	font-size: 13px;
	padding-top: 12px;
	display: inline-block;
}

section#product_overview div.add_to_cart span.sale {
	color: #4FABA5;
	padding-right: 13px;
	font-weight: 300;
	background-image: url('../img/strike-through.jpg');
	background-repeat: no-repeat;
	background-size: 100% 100%;
}

section#product_overview div.add_to_cart span.piece {
	font-size: 14px;
}

section#product_overview div.add_to_cart button,
section#cart table button {
	border: none;
	background: none;
	outline: none;
}

section#product_overview div.add_to_cart button img,
section#cart table button img {
	width: 18px;
	height: auto;
}

section#product_overview div.add_to_cart h1 {
	display: none;
}

@media all and (max-width: 1240px) {
	section#product_overview section#aspects > div {
		width: 50%;
		margin-bottom: 20px;
	}
	
	section#product_overview section#aspects > div:nth-of-type(3n+3) {
		clear: left;
	}
}

@media all and (max-width: 1200px) {
	section#versions > div {
		width: 100%;
	}
	
	section#versions ul li {
		max-width: 110px;
	}
}

@media all and (max-width: 1100px) {
	section#product_overview section#content section#main {
		padding-right: 70px;
	}
}

@media all and (max-width: 1024px) {
	section#product_overview div.add_to_cart {
		position: fixed;
		bottom: 9px;
		right: 9px;
		padding: 12px;
		border-radius: 12px;
		border: 1px solid #CECECE;
		background-color: #FFF;
		box-shadow: 1px 0px 9px 1px rgba(0, 0, 0, 0.22);
		transition: opacity 1s;
		
	}
	
	section#product_overview div.add_to_cart h1 {
		display: block;
		font-weight: 300;
		font-size: 15px;
		margin: 0px 0px 4px 0px;
		padding-bottom: 4px;
		border-bottom: 1px solid #CECECE;
	}
	
	body.footer_in_view section#product_overview div.add_to_cart,
	body.scrolling section#product_overview div.add_to_cart  {
		opacity: 0;
		pointer-events: none;
	}
}

@media all and (max-width: 920px) {
	section#product_overview header h2 {
		width: auto;
		margin-right: 11px;
	}
	
	section#product_overview header img {
		float: left;
		clear: left;
		margin: 12px 0px;
	}
	
	section#product_overview section#content {
		width: 100%;
		border-right: none;
	}
	
	section#product_overview section#gallery {
		width: 100%;
		padding-left: 0px;
		padding-top: 90px;
	}
	
	section#product_overview section#aspects > div {
		width: 25%;
	}
	
	section#product_overview section#aspects > div:nth-of-type(3n+3) {
		clear: none;
	}
}

@media all and (max-width: 800px) {
	section#product_overview div.add_to_cart {
		font-size: 90%;
	}
	
	section#product_overview div.add_to_cart span.stock {
		font-size: 12px;
	}
	
	section#product_overview div.add_to_cart span.sale,
	section#product_overview div.add_to_cart span.current_price {
		font-size: 24px;
	}
	
	div.add_to_cart form input.cta {
		font-size: 12px;
	}
	
	section#product_overview section#aspects > div {
		width: 50%;
		margin-bottom: 20px;
	}
	
	section#product_overview section#aspects > div:nth-of-type(3n+3) {
		clear: left;
	}
	
	section#product_overview header h2,
	section#product_overview header h1 {
		width: 100%;
		margin-right: 0px;
	}
	
	section#product_overview section#content section#main {
		padding-right: 0px;
	}
	
	section#product_overview section#aspects {
		padding-right: 0px;
	}
}

@media all and (max-width: 500px) {
	section#product_overview section#aspects > div {
		width: 100%;
	}
	
	section.product_section h1 {
		font-size: 20px;
	}
	
}

body > footer {
	padding-bottom: 32px;
	overflow: hidden;
}

footer div#back_to_top {
	text-align: center;
	padding: 25px 0px;
}

footer div#kiyoh > div {
	color: #FF741F;
	margin-top: -11px;
	margin-bottom: 15px;
}

footer div#kiyoh p {
	clear: left;
}

footer div#kiyoh img {
	float: left;
}

footer div#kiyoh div span.rating {
	font-size: 42px;
	font-weight: 500;
	display: block;
}

footer div#kiyoh div span.review_count {
	font-size: 11px;
	display: block;
	margin-top: -10px;
}

footer div#kiyoh > div {
	float: left;
}
/* ... */

